kcoreaddons (4.100.0-0ubuntu1) UNRELEASED; urgency=medium

  [ Jonathan Riddell ]
  * New upstream beta release

  [ Scarlett Clark ]
  * Bump depends versions

  [ Philip Muškovac ]
  * Refresh libkf5coreaddons5.symbols

  [ Harald Sitter ]
  * Remove useless Pre-Depends fields used for multiarch compat in
    releases older than trusty

 -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 02 Jun 2014 13:36:05 +0100

kcoreaddons (4.99.0-0ubuntu1) trusty; urgency=medium

  [ José Manuel Santamaría Lema ]
  * Install *.pri files in arch dependent path.

  [ Jonathan Riddell ]
  * New upstream beta release

 -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 05 May 2014 15:39:43 +0100

kcoreaddons (4.98.0-0ubuntu1) trusty; urgency=medium

  [ Jonathan Riddell ]
  * New upstream alpha release
  * Rename library package for soname 5

  [ Scarlett Clark ]
   - Generate new symbols

  [ Jonathan Riddell ]
  * New upstream beta release

 -- Jonathan Riddell <jriddell@ubuntu.com>  Sat, 29 Mar 2014 10:24:42 +0000

kcoreaddons (4.96.0-0ubuntu1) trusty; urgency=medium

  [ Rohan Garg ]
  * New upstream alpha release

  [ Scarlett Clark ]
  * Fix changed lib names in deb/*.install
  * Fixed soname error renamed package to 4 

 -- Rohan Garg <rohangarg@kubuntu.org>  Tue, 11 Feb 2014 18:29:51 +0100

kcoreaddons (4.95.0-0ubuntu1) trusty; urgency=low

  [ Michał Zając ]
  * Initial release

  [ Jonathan Riddell ]
  * Add disable-failing-test.diff which occationally fails in the
    PPA builder

 -- Michał Zając <quintasan@kubuntu.org>  Thu, 09 Jan 2014 17:55:45 +0100