@@ -13,6 +13,9 @@ kcoreaddons (4.100.0-0ubuntu1) UNRELEASED; urgency=medium
   * Remove useless Pre-Depends fields used for multiarch compat in
     releases older than trusty
 
+  [ José Manuel Santamaría Lema ]
+  * Create a HOME directory for the tests.
+
  -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 02 Jun 2014 13:36:05 +0100
 
 kcoreaddons (4.99.0-0ubuntu1) trusty; urgency=medium
